updated style and trigger words

--- a/src/components/accordion/AccordionSection.scss
+++ b/src/components/accordion/AccordionSection.scss
@@ -35,7 +35,7 @@
     }
 
     .content {
-        background-color: rgb(243, 226, 226);
+        background-color: #effcff;
         padding: 0 16px;
         display: flex;
         justify-content: center;
