--- a/src/components/queue-list/QueueList.scss
+++ b/src/components/queue-list/QueueList.scss
@@ -34,7 +34,7 @@
     flex-direction: column;
     align-self: center;
     margin-top: 1rem;
-    background: rgb(246, 250, 248);
+    background: #effcff;
     width: 100vw;
     border-bottom: 1pt solid #00c4ff;
 
