addressed pr comments

--- a/src/components/queue-list/QueueList.scss
+++ b/src/components/queue-list/QueueList.scss
@@ -50,6 +50,7 @@
         padding: 12px;
         background: white;
         border: 1pt solid #00c4ff;
+        font-family: sans-serif;
       }
     }
 
